# sentra-ai

./: .gitignore  LAUNCH_CHECKLIST.md  README.md  VERCEL_DEPLOY.md  login_res.json  package.json  render.yaml  schema.sql  sentra_all_fixes.md  test1_sneaky.sh
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  TEST_GUIDE.md  alembic.ini  check_orgs.ts  check_task2.json  dev.db  docker-compose.yml  jest.config.js  login_task2.json  output.json  package-lock.json  package.json  prisma.config.ts  promote_user.ts  pyproject.toml  render.yaml  requirements.txt  run-migration-rbac.ts  run-migration.ts  test-alert-manual.js  test-db.js  test-email.js  test2_privacy.js  test2_privacy.ts  test3_speed.sh  tsconfig.json  tsconfig.test.json  vercel.json  verify-simple.js
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: current_user.py  health.py  policy_health.py  router.py
backend/app/core/: bootstrap.py  config.py  dependencies.py  errors.py  logging.py  middleware.py  (+1 more)
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/prisma/: production_schema.sql  schema.prisma  seed.ts
backend/sample_data/: customer_support_logs.txt  financial_records.csv  secrets.env  support_logs.txt
backend/scratch/: fix_db.ts  fix_db_raw.js
backend/scripts/: migrate_incidents.py  seed_demo_data.py  test_telemetry_sdk.py
backend/src/: app.ts  server.ts  test-db.ts  verify-flow.ts
backend/tests/: coverage_booster.test.ts  decisionEngine.test.ts  engine_coverage.test.ts  policy.test.ts
(+445 files in other folders)
